--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,6 +15,10 @@
 
   <div id="container">
     <strong>Meu nome é Geovanna Paz</strong>
-    <p>sou da turma <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <p>sou da turma ADS0301M </p>
+    <ion-img
+    src="assets/img/foto gege.png"
+    alt=""
+  ></ion-img>
   </div>
 </ion-content>
